[gd_scene load_steps=36 format=2]

[ext_resource path="res://Sprites/paro.png" type="Texture" id=1]
[ext_resource path="res://Paro.gd" type="Script" id=2]
[ext_resource path="res://Sprites/spinning_rock.png" type="Texture" id=3]
[ext_resource path="res://UpdatedHurt.tres" type="Material" id=4]
[ext_resource path="res://HurtAreaParo.gd" type="Script" id=5]
[ext_resource path="res://BounceArea.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 540, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1080, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1260, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 1980, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 2160, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 1620, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 1620, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 180, 140 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 83 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 83 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 83 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 83 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 150, 83 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 1620, 0, 180, 140 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 29 ) ],
"loop": false,
"name": "Enter",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 25 ) ],
"loop": true,
"name": "Fire",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "Fired",
"speed": 7.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "SpinAttack",
"speed": 10.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "Win",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 18.5, 43.5 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 42, 18 )

[sub_resource type="Animation" id=31]
resource_name = "AltHurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 21, 45.5 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 44, 19.5 )

[sub_resource type="CircleShape2D" id=24]
radius = 27.0185

[node name="Paro" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 4 )
frames = SubResource( 10 )
animation = "Win"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.5, 23.5 )
shape = SubResource( 13 )

[node name="RockCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 19 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AltHurt = SubResource( 31 )
anims/Hurt = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )

[node name="BodyCollider" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 3, 23.5 )
shape = SubResource( 22 )

[node name="RockColllider" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 1, 16.5 )
shape = SubResource( 23 )
disabled = true

[node name="BounceArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
shape = SubResource( 24 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )

[node name="EnterDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpinTimer" type="Timer" parent="."]
one_shot = true

[node name="IFramesTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
[connection signal="body_entered" from="BounceArea" to="." method="_on_BounceArea_body_entered"]
[connection signal="timeout" from="EnterDelay" to="." method="_on_EnterDelay_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_SpinTimer_timeout"]
[connection signal="timeout" from="IFramesTimer" to="." method="_on_IFramesTimer_timeout"]
